Avoid floating elements in aliasesview CSS
This removes a little bit of (mostly invisible) clutter. There is no
need for float. Simply make each alias a block element.

This does make a little *positive* difference in edit mode.

--- a/view/resources/jquery/wikibase/themes/default/jquery.wikibase.entitytermsforlanguagelistview.css
+++ b/view/resources/jquery/wikibase/themes/default/jquery.wikibase.entitytermsforlanguagelistview.css
@@ -93,10 +93,10 @@
 .wikibase-entitytermsforlanguagelistview .wikibase-entitytermsforlanguagelistview-listview .wikibase-entitytermsforlanguageview .wikibase-entitytermsforlanguageview-aliases li {
 	background: none;
 	border: 0;
-	clear: both;
+	display: block;
+	float: none;
 	margin: 0;
 	padding: 0;
-	width: 100%;
 }
 
 .wikibase-entitytermsview .wikibase-entitytermsview-entitytermsforlanguagelistview .wikibase-entitytermsforlanguageview .wikibase-entitytermsforlanguageview-language {
